--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@
             #apDiv8 {
 	position: absolute;
 	width: 259px;
-	height: 200px;
+	height: 1000px;
 	z-index: 1;
 	left: 731px;
 	top: 503px;
@@ -134,7 +134,7 @@ div {
 	height: 41px;
 	z-index: 2;
 	left: 64px;
-	top: 982px;
+	top: 1459px;
 }
         #apDiv14 {
 	position: absolute;
@@ -240,7 +240,7 @@ div {
 	height: 30px;
 	z-index: 10;
 	left: 436px;
-	top: 980px;
+	top: 1456px;
 	font-size: 12px;
 	color: #FFF;
 }
@@ -250,7 +250,7 @@ div {
 	height: 26px;
 	z-index: 11;
 	left: 328px;
-	top: 996px;
+	top: 1472px;
 	font-size: 12px;
 	color: #FFF;
 }
@@ -262,7 +262,7 @@ div {
 	font-size: 12px;
 	color: #FFF;
 	left: 516px;
-	top: 1012px;
+	top: 1488px;
 }
 #contenidos{
 	width: 1000px;
@@ -326,10 +326,12 @@ li{
 	box-shadow: inset 0px 0px 10px white;
 	margin-top: 7px;
 }
+/* lo que esta abajo es lo largo de la página, hay que tener cuidado con esto pues 
+cuando se modifica las imagenes se desalinean*/
 section{
 	width: 713px;
 	background: white;
-	height: 720px;
+	height: 1200px;
 	float: left;
 	margin-top: 7px;
 	border-radius: 10px 0px 0px 0px;
