--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ bottom: 1000px;
 	height: 41px;
 	z-index: 2;
 	left: 64px;
-	top: 1459px;
+	top: 1559px;
 }
         #apDiv14 {
 	position: absolute;
@@ -247,7 +247,7 @@ bottom: 1000px;
 	height: 30px;
 	z-index: 10;
 	left: 436px;
-	top: 1456px;
+	top: 1556px;
 	font-size: 12px;
 	color: #FFF;
 }
@@ -257,7 +257,7 @@ bottom: 1000px;
 	height: 26px;
 	z-index: 11;
 	left: 328px;
-	top: 1472px;
+	top: 1572px;
 	font-size: 12px;
 	color: #FFF;
 }
@@ -269,7 +269,7 @@ bottom: 1000px;
 	font-size: 12px;
 	color: #FFF;
 	left: 516px;
-	top: 1488px;
+	top: 1588px;
 }
 #contenidos{
 	width: 1000px;
@@ -335,10 +335,11 @@ li{
 }
 /* lo que esta abajo es lo largo de la página, hay que tener cuidado con esto pues 
 cuando se modifica las imagenes se desalinean*/
+/*width= ancho    height= alto*/
 section{
 	width: 713px;
 	background: white;
-	height: 1200px;
+	height: 1300px;
 	float: left;
 	margin-top: 7px;
 	border-radius: 10px 0px 0px 0px;
