--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,26 @@ bottom: 1000px;
 	left: 516px;
 	top: 1588px;
 }
+ #apDiv28 {
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	z-index: 12;
+	font-size: 12px;
+	color: #FFF;
+	left: 516px;
+	top: 1488px;
+}
+#apDiv29 {
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	z-index: 12;
+	font-size: 12px;
+	color: #FFF;
+	left: 10px;
+	top: 1488px;
+}
 #contenidos{
 	width: 1000px;
 	height: auto;
